syntax = "proto3";

package calculator;

option go_package = "github.com/pool13433/grpc-go/calculator/proto";

message SumRequest {
  int32 first_num = 1;
  int32 second_num = 2;
}

message SumResponse {
  int32 result = 1;
}